versioned_docs/version-2.8.0/platforms/bazzite.mdx
# Bazzite

:::warning[Beta]
Bazzite support is currently in beta. Some features may not work as expected.
:::

Zaparoo Core on [Bazzite](https://bazzite.gg/) supports launching Steam games and shell scripts. Release builds are available for both AMD64 and ARM64 architectures.

## File Paths

| Item               | Path                                   |
| ------------------ | -------------------------------------- |
| Config file        | `~/.config/zaparoo/config.toml`        |
| Data directory     | `~/.local/share/zaparoo`               |
| Log file           | `/tmp/<session_id>-zaparoo/core.log`   |
| Mappings directory | `~/.local/share/zaparoo/mappings`      |

Where `~` is the home directory of the current user.

## Install

Download Zaparoo Core for Bazzite from the [Downloads page](/downloads/), unzip it and copy the `zaparoo` file to your home directory.

```bash
cd $HOME
./zaparoo -install
systemctl --user enable zaparoo.service
systemctl --user start zaparoo.service
```

To uninstall:

```bash
./zaparoo -uninstall
```

## Readers

All [readers](../readers/index.md) are supported.

## Launchers

| Launcher      | Systems | Notes                                  |
| ------------- | ------- | -------------------------------------- |
| Steam         | PC      | Native and Flatpak Steam installations |
| Web Browser   | N/A     | Opens URLs in default browser          |
| Shell Scripts | Any     | Custom `.sh` file execution            |

### Steam

Launches games from your Steam library. Both native (pre-installed) and Flatpak Steam installations are automatically detected. Games are launched using `xdg-open`, which works in both desktop and gaming modes.

Games are indexed from:
- `~/.steam/steam/steamapps/`
- `~/.local/share/Steam/`

To manually launch a Steam game, write `steam://<app_id>` to a token.

### Shell Scripts

Execute arbitrary shell scripts. Requires explicit allow list configuration for security.

```toml title="config.toml"
[launchers]
allow_file = [
    "^/home/.*/scripts/.*\\.sh$"
]
```
