versioned_docs/version-2.9.1/platforms/bazzite.mdx
# Bazzite

:::warning[Beta]
Bazzite support is currently in beta. Some features may not work as expected.
:::

Zaparoo Core on [Bazzite](https://bazzite.gg/) supports launching Steam games and shell scripts. Release builds are available for both AMD64 and ARM64 architectures.

## File Paths

| Item               | Path                                   |
| ------------------ | -------------------------------------- |
| Config file        | `~/.config/zaparoo/config.toml`        |
| Data directory     | `~/.local/share/zaparoo`               |
| Log file           | `/tmp/<session_id>-zaparoo/core.log`   |
| Mappings directory | `~/.local/share/zaparoo/mappings`      |

Where `~` is the home directory of the current user.

## Install

Open a terminal and run:

```bash
curl -fsSL https://zaparoo.org/install.sh | bash
```

This installs all necessary components and sets up the service to run on startup. Since Bazzite has an immutable root filesystem, the installation is user-local (installed to `~/.local/bin`).

To uninstall:

```bash
~/.local/bin/zaparoo -uninstall application
~/.local/bin/zaparoo -uninstall service
~/.local/bin/zaparoo -uninstall desktop
sudo ~/.local/bin/zaparoo -uninstall hardware
```

## Readers

All [readers](../readers/index.md) are supported.

## Launchers

| Launcher      | Systems | Notes                                  |
| ------------- | ------- | -------------------------------------- |
| Steam         | PC      | Native and Flatpak Steam installations |
| Kodi          | Media   | Videos, movies, TV shows, music        |
| Web Browser   | N/A     | Opens URLs in default browser          |
| Shell Scripts | Any     | Custom `.sh` file execution            |

### Steam

Launches games from your Steam library. Both native (pre-installed) and Flatpak Steam installations are automatically detected. Games are launched using `xdg-open`, which works in both desktop and gaming modes.

Games are indexed from:
- `~/.steam/steam/steamapps/`
- `~/.local/share/Steam/`

To manually launch a Steam game, write `steam://<app_id>` to a token.

### Kodi

Launch media content from a [Kodi](https://kodi.tv/) instance running on your network.

Supported content:
- Video and audio files
- Movies and TV episodes
- Music (songs, albums, artists)

```toml title="config.toml"
[[launchers.default]]
launcher = "Kodi"
server_url = "http://kodi:8080"
```

Replace `kodi:8080` with your Kodi instance's address and web interface port.

### Shell Scripts

Execute arbitrary shell scripts. Requires explicit allow list configuration for security.

```toml title="config.toml"
[launchers]
allow_file = [
    "^/home/.*/scripts/.*\\.sh$"
]
```
